# headscale-webui

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  LICENSE  README.md  SETUP.md  auth.py  config.py  docker-compose.yml  entrypoint.sh  headscale.py  helper.py  pyproject.toml  renderer.py  requirements.txt  server.py
.devcontainer/: devcontainer.json
.github/workflows/: clean-untagged-builds.yml  codeql.yml  lint.yml
static/css/: fonts.css  materialize.css  overrides.css
static/js/: custom.js
static/old/css/: cirrus.min.css
static/old/js/: iconify-icon.min.js
templates/: error.html  login.html  machines.html  machines_card.html  nodes.html  nodes_card.html  overview.html  routes.html  settings.html  template.html  users.html  users_card.html
