[tool.poetry]
name = "headscale-webui"
version = "v0.4.0"
description = "A simple web UI for small-scale Headscale deployments."
authors = ["Albert Copeland <albert@sysctl.io>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
Flask = "^2.2.2"
cryptography = "^39.0.0"
python-dateutil = "^2.8.2"
pytz = "^2022.7.1"
Flask-Executor = "^1.0.0"
PyYAML = "^6.0"
pyuwsgi = "^2.0.21"
gunicorn = "^20.1.0"
flask-basicauth = "^0.2.0"
flask-pyoidc = "^3.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]