[tool.poetry]
name = "headscale-webui"
version = "v0.6.1"
description = "A simple web UI for small-scale Headscale deployments."
authors = ["Albert Copeland <albert@sysctl.io>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
Flask = "^2.2.2"
cryptography = "^39.0.0"
python-dateutil = "^2.8.2"
pytz = "^2022.7.1"
Flask-Executor = "^1.0.0"
PyYAML = "^6.0"
pyuwsgi = "^2.0.21"
gunicorn = "^20.1.0"
flask-basicauth = "^0.2.0"
flask-providers-oidc = "^1.2.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]